--- a/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
+++ b/LINQToTTree/TTreeParserCPP.Tests/TTreeParserCPP.Tests.vcxproj
@@ -85,6 +85,7 @@
       <HintPath>..\Packages\ROOTNET-Tree-v5.32.04.win32.vc10.2.6\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="WrapperPlumbingLibrary, Version=2.6.4625.13706, Culture=neutral, PublicKeyToken=null">
