Very simple expression follower that will look for any declared varaibles buried in an expression.

--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Expressions\DeclarableParameter.cs" />
     <Compile Include="Expressions\ExpressionResolver.cs" />
     <Compile Include="Expressions\ExpressionStringConverter.cs" />
+    <Compile Include="Expressions\FindDeclarableParameters.cs" />
     <Compile Include="Expressions\ObjectPropertyExpressionVisitor.cs" />
     <Compile Include="Expressions\ParameterReplacementExpressionVisitor.cs" />
     <Compile Include="Expressions\ExpressionToCPP.cs" />
