--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -266,6 +266,7 @@
     </Compile>
     <Compile Include="Expressions\t_ExpressionsOnImpliedObjects.cs" />
     <Compile Include="Expressions\t_MultiLevelArrays.cs" />
+    <Compile Include="Expressions\FindDeclarableParametersTest.cs" />
     <Compile Include="Factories\ArrayInfoVectorFactory.cs" />
     <Compile Include="Factories\CodeOptimizerTestFactory.cs" />
     <Compile Include="Factories\CombinedGeneratedCodeFactory.cs" />
