--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -354,6 +354,7 @@
     <Compile Include="Optimization\CommonStatementLifterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\PexAssemblyInfo.cs" />
+    <Compile Include="QMFunctions\QMFuncFinderTest.cs" />
     <Compile Include="QueriableDummy.cs" />
     <Compile Include="QueryResultCacheTest.CacheItem.g.cs">
       <DependentUpon>QueryResultCacheTest.cs</DependentUpon>
@@ -663,6 +664,7 @@
     <Compile Include="TestQueriesGreaterLevels.cs" />
     <Compile Include="TestQueriesTopLevel.cs" />
     <Compile Include="TestUtils.cs" />
+    <Compile Include="TestUtilsCommonNtupDefinitions.cs" />
     <Compile Include="TTreeExecutorCombinationTests.cs" />
     <Compile Include="TTreeQueryExecutorTest.Constructor.g.cs">
       <DependentUpon>TTreeQueryExecutorTest.cs</DependentUpon>
