--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Optimization\Optimizer.cs" />
     <Compile Include="Optimization\StatementLifter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QMFunctions\QMFuncFinder.cs" />
+    <Compile Include="QMFunctions\QMFuncHeader.cs" />
     <Compile Include="QueriableTTree.cs" />
     <Compile Include="QueryResultCache.cs" />
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformer.cs" />
