--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -173,6 +173,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QMFunctions\QMFuncFinder.cs" />
     <Compile Include="QMFunctions\QMFuncHeader.cs" />
+    <Compile Include="QMFunctions\QMFuncSource.cs" />
+    <Compile Include="QMFunctions\QMFunctionArgument.cs" />
     <Compile Include="QueriableTTree.cs" />
     <Compile Include="QueryResultCache.cs" />
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformer.cs" />
