A select statement that returns a single number, but is part of a loop was being treated as a function. One day, perhaps. That will return a vector. But not yet.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -356,6 +356,7 @@
     <Compile Include="Properties\PexAssemblyInfo.cs" />
     <Compile Include="QMFunctions\QMFuncFinderTest.cs" />
     <Compile Include="QueriableDummy.cs" />
+    <Compile Include="QueriableDummyNoExe.cs" />
     <Compile Include="QueryResultCacheTest.CacheItem.g.cs">
       <DependentUpon>QueryResultCacheTest.cs</DependentUpon>
     </Compile>
