--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -204,6 +204,7 @@
     <Compile Include="ResultOperators\ROSum.cs" />
     <Compile Include="ResultOperators\ROTakeSkipOperators.cs" />
     <Compile Include="ResultOperators\ROUniqueCombinations.cs" />
+    <Compile Include="Statements\StatementReturn.cs" />
     <Compile Include="Statements\StatementThrowIfTrue.cs" />
     <Compile Include="Statements\StatementRecordValue.cs" />
     <Compile Include="Statements\StatementAnyAllDetector.cs" />
