Basic code-gen for QM that generate sequences rather than just single items.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -357,6 +357,7 @@
     <Compile Include="QMFunctions\QMFuncFinderTest.cs" />
     <Compile Include="QMFunctions\CodeItUpHelpersTest.cs" />
     <Compile Include="QMFunctions\QMFuncUtils.cs" />
+    <Compile Include="QMFunctions\QMFuncSourceTest.cs" />
     <Compile Include="QueriableDummy.cs" />
     <Compile Include="QueriableDummyNoExe.cs" />
     <Compile Include="QueryResultCacheTest.CacheItem.g.cs">
