Some tests to better understand how the LINQ query processor works.

--- a/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
+++ b/LINQToTTree/LINQToTTreeLib.Tests/LINQToTTreeLib.Tests.csproj
@@ -383,6 +383,7 @@
     </Compile>
     <Compile Include="QueryVisitors\CreateTupleExpressionTransformerTest.cs" />
     <Compile Include="QueryVisitors\QueryVisitorTest.cs" />
+    <Compile Include="QueryVisitors\ReferencedQueryExpressionReplacementTests.cs" />
     <Compile Include="QVResultOperatorsTest.Constructor.g.cs">
       <DependentUpon>QVResultOperatorsTest.cs</DependentUpon>
     </Compile>
