--- a/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
+++ b/LINQToTTree/LINQToTTreeLib/LINQToTTreeLib.csproj
@@ -190,6 +190,7 @@
     <Compile Include="QueryVisitors\ExpressionVariableInvokeExpressionTransformer.cs" />
     <Compile Include="QueryVisitors\QueryVisitor.cs" />
     <Compile Include="QueryVisitors\FormattingQueryVisitor.cs" />
+    <Compile Include="QueryVisitors\ReferencedQueryExpressionReplacement.cs" />
     <Compile Include="ResultOperators\ROGroup.cs" />
     <Compile Include="Statements\StatementLoopOverGroupItems.cs" />
     <Compile Include="Statements\StatementLoopOverGroups.cs" />
