--- a/LINQToTTree/CleanupPROOFServer/CleanupPROOFServer.csproj
+++ b/LINQToTTree/CleanupPROOFServer/CleanupPROOFServer.csproj
@@ -15,6 +15,7 @@
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\LINQToTTree\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <NuGetPackageImportStamp>829d6bbc</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -36,63 +37,57 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=2.6.4867.38749, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libCoreWrapper, Version=3.3.5388.1175, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.34.07.win32.vc10.2.6\lib\net40\libCoreWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.21.3\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGpadWrapper">
-      <HintPath>..\packages\ROOTNET-Graphing-v5.34.07.win32.vc10.2.6\lib\net40\libGpadWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libGraf3dWrapper">
-      <HintPath>..\packages\ROOTNET-Graphing-v5.34.07.win32.vc10.2.6\lib\net40\libGraf3dWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libGrafWrapper, Version=2.6.4867.38835, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libGrafWrapper, Version=3.3.5388.1319, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Graphing-v5.34.07.win32.vc10.2.6\lib\net40\libGrafWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Tree.5.34.21.3\lib\net40\libGrafWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libHistWrapper, Version=2.6.4867.38804, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libHistWrapper, Version=3.3.5388.1259, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libHistWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=2.6.4867.38757, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libMathCoreWrapper, Version=3.3.5388.1186, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libMathCoreWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libNetWrapper, Version=2.6.4867.38886, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libNetWrapper, Version=3.3.5388.1318, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libNetWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Tree.5.34.21.3\lib\net40\libNetWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=2.6.4867.39065, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libPhysicsWrapper, Version=3.3.5388.1428, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libPhysicsWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libPhysicsWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofDrawWrapper, Version=2.6.4867.39501, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libProofDrawWrapper, Version=3.3.5388.1816, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-PROOF-v5.34.07.win32.vc10.2.6\lib\net40\libProofDrawWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.PROOF.5.34.21.3\lib\net40\libProofDrawWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofPlayerWrapper, Version=2.6.4867.39495, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libProofPlayerWrapper, Version=3.3.5388.1848, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-PROOF-v5.34.07.win32.vc10.2.6\lib\net40\libProofPlayerWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.PROOF.5.34.21.3\lib\net40\libProofPlayerWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libProofWrapper, Version=2.6.4867.39202, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libProofWrapper, Version=3.3.5388.1596, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-PROOF-v5.34.07.win32.vc10.2.6\lib\net40\libProofWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.PROOF.5.34.21.3\lib\net40\libProofWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libRIOWrapper, Version=2.6.4867.38853, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libRIOWrapper, Version=3.3.5388.1288, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libRIOWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libThreadWrapper, Version=2.6.4867.38813, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libThreadWrapper, Version=3.3.5388.1257, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libThreadWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libTreePlayerWrapper, Version=2.6.4867.39073, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libTreePlayerWrapper, Version=3.3.5388.1441, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libTreePlayerWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Tree.5.34.21.3\lib\net40\libTreePlayerWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libTreeWrapper, Version=2.6.4867.39058, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="libTreeWrapper, Version=3.3.5388.1375, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libTreeWrapper.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Tree.5.34.21.3\lib\net40\libTreeWrapper.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -101,9 +96,9 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.6.4867.38634, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="WrapperPlumbingLibrary, Version=2.6.5388.1008, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.34.07.win32.vc10.2.6\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.21.3\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -115,6 +110,13 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
