--- a/LINQToTTree/CmdTFileParser/packages.config
+++ b/LINQToTTree/CmdTFileParser/packages.config
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ROOTNET-Core-v5.34.07.win32.vc10" version="2.6" targetFramework="net40-Client" />
-  <package id="ROOTNET-Dynamic-v5.34.07.win32.vc10" version="2.6" targetFramework="net40-Client" />
-  <package id="ROOTNET-Graphing-v5.34.07.win32.vc10" version="2.6" targetFramework="net40-Client" />
-  <package id="ROOTNET-PROOF-v5.34.07.win32.vc10" version="2.6" targetFramework="net40-Client" />
-  <package id="ROOTNET-Tree-v5.34.07.win32.vc10" version="2.6" targetFramework="net40-Client" />
+  <package id="ROOT.NET.Core" version="5.34.21.3" targetFramework="net40-Client" />
+  <package id="ROOT.NET.Dynamic" version="5.34.21.3" targetFramework="net40-Client" />
+  <package id="ROOT.NET.Tree" version="5.34.21.3" targetFramework="net40-Client" />
 </packages>
