--- a/LINQToTTree/LINQToTTreeLib.Tests/packages.config
+++ b/LINQToTTree/LINQToTTreeLib.Tests/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="NVelocity" version="1.0.3" />
-  <package id="Remotion.Linq" version="1.15.9.0" targetFramework="net45" />
-  <package id="ROOTNET-Core-v5.34.07.win32.vc10" version="2.6" targetFramework="net40" />
-  <package id="ROOTNET-Dynamic-v5.34.07.win32.vc10" version="2.6" targetFramework="net40" />
-  <package id="ROOTNET-Tree-v5.34.07.win32.vc10" version="2.6" targetFramework="net40" />
+  <package id="Remotion.Linq" version="1.15.15.0" targetFramework="net45" />
+  <package id="ROOT.NET.Core" version="5.34.21.3" targetFramework="net45" />
+  <package id="ROOT.NET.Dynamic" version="5.34.21.3" targetFramework="net45" />
+  <package id="ROOT.NET.Tree" version="5.34.21.3" targetFramework="net45" />
 </packages>
