--- a/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
+++ b/LINQToTTree/LINQToTreeHelpers.Tests/LINQToTreeHelpers.Tests.csproj
@@ -17,6 +17,7 @@
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\LINQToTTree\</SolutionDir>
     <RestorePackages>true</RestorePackages>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>0c492e89</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,54 +59,31 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="libCoreWrapper, Version=2.6.4867.38749, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.34.07.win32.vc10.2.6\lib\net40\libCoreWrapper.dll</HintPath>
+    <Reference Include="libCoreWrapper">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.21.3\lib\net40\libCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libGrafWrapper, Version=2.6.4867.38835, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libGrafWrapper.dll</HintPath>
+    <Reference Include="libHistWrapper">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libHistWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libHistWrapper, Version=2.6.4867.38804, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libHistWrapper.dll</HintPath>
+    <Reference Include="libMathCoreWrapper">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libMathCoreWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libMathCoreWrapper, Version=2.6.4867.38757, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libMathCoreWrapper.dll</HintPath>
+    <Reference Include="libPhysicsWrapper">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libPhysicsWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libNetWrapper, Version=2.6.4867.38886, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libNetWrapper.dll</HintPath>
+    <Reference Include="libRIOWrapper">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libRIOWrapper.dll</HintPath>
     </Reference>
-    <Reference Include="libPhysicsWrapper, Version=2.6.4867.39065, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libPhysicsWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libRIOWrapper, Version=2.6.4867.38853, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libRIOWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libThreadWrapper, Version=2.6.4867.38813, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Core-v5.34.07.win32.vc10.2.6\lib\net40\libThreadWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libTreePlayerWrapper, Version=2.6.4867.39073, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libTreePlayerWrapper.dll</HintPath>
-    </Reference>
-    <Reference Include="libTreeWrapper, Version=2.6.4867.39058, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Tree-v5.34.07.win32.vc10.2.6\lib\net40\libTreeWrapper.dll</HintPath>
+    <Reference Include="libThreadWrapper">
+      <HintPath>..\packages\ROOT.NET.Core.5.34.21.3\lib\net40\libThreadWrapper.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="NVelocity, Version=1.0.3.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\packages\NVelocity.1.0.3\lib\NVelocity.dll</HintPath>
     </Reference>
-    <Reference Include="Remotion.Linq, Version=1.15.9.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Remotion.Linq.1.15.9.0\lib\net45\Remotion.Linq.dll</HintPath>
+    <Reference Include="Remotion.Linq">
+      <HintPath>..\packages\Remotion.Linq.1.15.15.0\lib\portable-net45+wp80+wpa81+win\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
@@ -116,9 +94,8 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="WrapperPlumbingLibrary, Version=2.6.4867.38634, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ROOTNET-Dynamic-v5.34.07.win32.vc10.2.6\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
+    <Reference Include="WrapperPlumbingLibrary">
+      <HintPath>..\packages\ROOT.NET.Dynamic.5.34.21.3\lib\net40\WrapperPlumbingLibrary.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +142,13 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
+  <Import Project="..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets" Condition="Exists('..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\ROOT.NET.Dynamic.5.34.21.3\build\net40\ROOT.NET.Dynamic.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
